object/complexcls1/output.txt
myArray1$ g++ myarray01.cpp 
myarray01.cpp: In function ‘void f1(myArray)’:
myarray01.cpp:29:10: error: no matching function for call to ‘myArray::myArray()’
   29 |  myArray c;
      |          ^
myarray01.cpp:22:2: note: candidate: ‘myArray::myArray(const double*, int)’
   22 |  myArray(const double *ma, int n){ /// myArray(const *ma, ...
      |  ^~~~~~~
myarray01.cpp:22:2: note:   candidate expects 2 arguments, 0 provided
myarray01.cpp:15:7: note: candidate: ‘constexpr myArray::myArray(const myArray&)’
   15 | class myArray{
      |       ^~~~~~~
myarray01.cpp:15:7: note:   candidate expects 1 argument, 0 provided
myarray01.cpp:15:7: note: candidate: ‘constexpr myArray::myArray(myArray&&)’
myarray01.cpp:15:7: note:   candidate expects 1 argument, 0 provided
myArray1$ 
